            poly_form: rename from minmax, rename options, add -y
              for symmetry constraint, add -a e equal-edge algorithm
              and -a p planarisation
         Changes
            to_nfold: add -x, -p to help with crossed models
            minmax: rename to poly_form
            repel: add -z for status reporting
            rotegrity: remove -T (old twist program output)
         Fixes
            minor bug fixes and improvements
            code review and fixes for potential issues

Version 0.27
01-10-20 Adrian Rossiter <adrian@antiprism.com>
         Changes
            off_color: new -e jJ to colour by edge length
            zono: -P add spirallohedra, new -T translation product
            conway: g and s take a numeric parameter
         Fixes
            off2vrml: avoid duplicate PROTO statements
            minor bug fixes and improvements

Version 0.26
05-04-19 Adrian Rossiter <adrian@antiprism.com>
         New Programs
            rotegrity: make rotegrity and nexorade models
            mmop_origami: multimodular polyhedron origami models
         Changes
            antiview: new keys 'u/U' change label size, 'M' planar
              face labels
            wythoff: new option -C for colouring by base elements
            conway: new options -C colouring method, -R colour seed
            geodesic, geo_m_n: change direction of pattern turn,
              so (m, n) is like previous (n, m)
            bravais: added inverse of f and i centering types
            n_icons: swap -J and -L option letters
            radial: renamed to off_color_radial
            twist: removed (use rotegrity -T -f)
            pol_recip: removed -r X (use wythoff -c d)
            sph_saff: removed (use antiprism_python)
            off2m,m2off: removed (Java applets no longer popular)
         Fixes
            minor bug fixes and improvements

Version 0.25.1
08-12-17 Adrian Rossiter <adrian@antiprism.com>
         Fixes