@@ -1,8 +1,6 @@
-rainbow=rng224_R1:1:1:0:0:0:1:1G0:0.5:1:1:1:0:0:0B0:0:0:0:1:1:1:0
-rainbowg=rng192_R1:1:1:0:0:1:1G0:0.5:1:1:0:0:0B0:0:0:0:1:1:0
-rainbowc=rng192_R1:1:1:0:0:1:1G0:0.5:1:1:0:0:0B0:0:0:1:1:1:0
-rgb_triangle=rng_R1:0:0:1G0:1:0:0B0:0:1:0
-cmy_triangle=rng_R0:1:1:0G1:0:1:1B1:1:0:1
-hexagonal=rng_R1:1:0.5:0:0:0.5:1G0:0.5:1:1:0.5:0:0B0.5:0:0:0.5:1:1:0.5
-
-
+rainbow=rng2240_R1:1:1:0:0:0:1:1G0:0.5:1:1:1:0:0:0B0:0:0:0:1:1:1:0
+rainbowg=rng1920_R1:1:1:0:0:1:1G0:0.5:1:1:0:0:0B0:0:0:0:1:1:0
+rainbowc=rng1920_R1:1:1:0:0:1:1G0:0.5:1:1:0:0:0B0:0:0:1:1:1:0
+rgb_triangle=rng2560_R1:0:0:1G0:1:0:0B0:0:1:0
+cmy_triangle=rng2560_R0:1:1:0G1:0:1:1B1:1:0:1
+hexagonal=rng2560_R1:1:0.5:0:0:0.5:1G0:0.5:1:1:0.5:0:0B0.5:0:0:0.5:1:1:0.5
